--- a/packages.config
+++ b/packages.config
@@ -8,6 +8,8 @@
   <package id="DotSpatial.NetTopologySuite" version="1.14.4" targetFramework="net48" />
   <package id="DotSpatial.Projections" version="2.0.1.2" targetFramework="net48" />
   <package id="DotSpatial.Serialization" version="2.0.1.2" targetFramework="net48" />
+  <package id="ExcelDataReader" version="3.8.0" targetFramework="net48" />
+  <package id="ExcelDataReader.DataSet" version="3.8.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.4" targetFramework="net48" />
   <package id="PdfSharpCore" version="1.3.67" targetFramework="net48" />
   <package id="SharpZipLib" version="1.4.2" targetFramework="net48" />
@@ -18,4 +20,5 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
